--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node Develop/index.js"
+    "start": "EDITOR=code node Develop/index.js"
   },
   "author": "Rocky",
   "license": "ISC",
   "dependencies": {
+    "@inquirer/editor": "^2.1.1",
     "chalk": "^5.3.0",
-    "inquirer": "^6.5.2"
+    "inquirer": "^6.5.2",
+    "robotjs": "^0.6.0"
   }
 }
